--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ cadquery = "^2.4.0"
 rlpycairo = "^0.3.0"
 loguru = "^0.7.2"
 langchainhub = "^0.1.15"
+streamlit = "^1.37.1"
 
 
 [tool.poetry.group.dev.dependencies]
