--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rlpycairo = "^0.3.0"
 loguru = "^0.7.2"
 langchainhub = "^0.1.15"
 streamlit = "^1.37.1"
+numpy = "1.26.4"
 
 
 [tool.poetry.group.dev.dependencies]
