--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ langchainhub = "^0.1.15"
 streamlit = "^1.37.1"
 numpy = "1.26.4"
 langchain-google-vertexai = {version = "^2.0.1", optional = true}
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
