--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key
 
+# Anthropic
+ANTHROPIC_API_KEY=your-anthropic-api-key
+
 # VertexAI
 VERTEXAI_PROJECT=your-project-id
 VERTEXAI_LOCATION=your-location
