add google gemini 2.0

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,13 @@
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key
 
-# Anthropic
+# Anthropic (Optional)
 ANTHROPIC_API_KEY=your-anthropic-api-key
 
-# VertexAI
+# Google GenAI (Optional)
+GOOGLE_API_KEY=your-google-api-key
+
+# VertexAI (Optional)
 VERTEXAI_PROJECT=your-project-id
 VERTEXAI_LOCATION=your-location
 GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account.json
