--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ numpy = "1.26.4"
 langchain-google-vertexai = {version = "^2.0.1", optional = true}
 python-dotenv = "^1.0.1"
 langchain-anthropic = "^0.3.0"
+langchain-google-genai = "^2.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
