--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-langchain = "^0.3.0"
+langchain = ">=0.3.18"
 langchain-openai = "^0.2.0"
 svglib = "^1.5.1"
 langchain-experimental = "^0.3.1"
@@ -21,7 +21,9 @@ numpy = "1.26.4"
 langchain-google-vertexai = {version = "^2.0.1", optional = true}
 python-dotenv = "^1.0.1"
 langchain-anthropic = "^0.3.0"
+matplotlib = "^3.9.2"
 langchain-google-genai = "^2.0.7"
+opencv-python = "^4.10.0.84"
 
 
 [tool.poetry.group.dev.dependencies]
